adds model properties
